--- a/package.json
+++ b/package.json
@@ -4,12 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev-start": "nodemon index.js",
+    "test": "eslint . --fix && jest --coverage --detectOpenHandles --forceExit --runInBand",
+    "testWatch": "jest --coverage --watchAll",
+    "test-nolint": "jest --coverage --detectOpenHandles --forceExit --runInBand",
+    "lint": "eslint .",
+    "dbon": "mkdir -p ./db && mongod --dbpath ./db",
+    "dboff": "killall mongod",
+    "build": "babel src -d build",
+    "start": "npm run build && node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "aws-sdk-mock": "^4.0.0",
     "babel-cli": "^6.26.0",
     "babel-eslint": "^8.2.5",
     "babel-preset-env": "^1.7.0",
@@ -28,12 +37,21 @@
     "uuid": "^3.3.2",
     "winston": "^3.0.0"
   },
+  "jest": {
+    "setupFiles": [
+      "<rootDir>/src/__test__/lib/test.env.js"
+    ]
+  },
   "dependencies": {
+    "aws-sdk": "^2.268.1",
+    "babel-polyfill": "^6.26.0",
     "bcrypt": "^2.0.1",
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "fs-extra": "^6.0.1",
     "http-errors": "^1.6.3",
     "jsonwebtoken": "^8.3.0",
-    "mongoose": "^5.1.8"
+    "mongoose": "^5.1.6",
+    "multer": "^1.3.1"
   }
 }
